dnl Process this file with autoconf to produce a configure script.
AC_INIT(gtk-sharp-beans, 2.13.90, stephane@delcroix.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(class/Builder.cs)

AM_INIT_AUTOMAKE

PKG_CHECK_MODULES(GTKSHARP, gtk-sharp-2.0 >= 2.12)
PKG_CHECK_MODULES(GLIBSHARP, glib-sharp-2.0 >= 2.12)

AC_OUTPUT(
Makefile 
class/Makefile
)
